Add to Winged Waypoints works, cannot see on My Winged Waypoints page